@@ -9,14 +9,10 @@
 
   <link rel="stylesheet" href="<%= rel_prefix %>/rdoc.css" type="text/css" media="screen" />
 
-  <script src="<%= rel_prefix %>/js/jquery.js" type="text/javascript"
-    charset="utf-8"></script>
-  <script src="<%= rel_prefix %>/js/thickbox-compressed.js" type="text/javascript"
-    charset="utf-8"></script>
-  <script src="<%= rel_prefix %>/js/quicksearch.js" type="text/javascript"
-    charset="utf-8"></script>
-  <script src="<%= rel_prefix %>/js/darkfish.js" type="text/javascript"
-    charset="utf-8"></script>
+  <script src="<%= rel_prefix %>/js/jquery.js" type="text/javascript" charset="utf-8"></script>
+  <script src="<%= rel_prefix %>/js/thickbox-compressed.js" type="text/javascript" charset="utf-8"></script>
+  <script src="<%= rel_prefix %>/js/quicksearch.js" type="text/javascript" charset="utf-8"></script>
+  <script src="<%= rel_prefix %>/js/darkfish.js" type="text/javascript" charset="utf-8"></script>
 
 </head>
 <body class="<%= klass.type %>">
@@ -66,9 +62,8 @@
     </div>
 
     <div id="class-metadata">
-
-      <!-- Parent Class -->
       <% if klass.type == 'class' then %>
+      <!-- Parent Class -->
       <div id="parent-class-section" class="section">
         <h3 class="section-header">Parent</h3>
         <% if klass.superclass and not String === klass.superclass then %>
@@ -79,8 +74,20 @@
       </div>
       <% end %>
 
+      <% unless klass.sections.length == 1 then %>
+      <!-- Sections -->
+      <div id="sections-section" class="section">
+        <h3 class="section-header">Sections</h3>
+        <ul class="link-list">
+          <% klass.sections.sort_by { |s| s.title.to_s }.each do |section| %>
+            <li><a href="#<%= section.sequence %>"><%= h section.title %></a></li>
+          <% end %>
+        </ul>
+      </div>
+      <% end %>
+
+      <% unless klass.classes_and_modules.empty? then %>
       <!-- Namespace Contents -->
-      <% unless klass.classes_and_modules.empty? %>
       <div id="namespace-list-section" class="section">
         <h3 class="section-header">Namespace</h3>
         <ul class="link-list">
@@ -91,8 +98,8 @@
       </div>
       <% end %>
 
+      <% unless klass.method_list.empty? then %>
       <!-- Method Quickref -->
-      <% unless klass.method_list.empty? %>
       <div id="method-list-section" class="section">
         <h3 class="section-header">Methods</h3>
         <ul class="link-list">
@@ -103,13 +110,13 @@
       </div>
       <% end %>
 
+      <% unless klass.includes.empty? then %>
       <!-- Included Modules -->
-      <% unless klass.includes.empty? %>
       <div id="includes-section" class="section">
         <h3 class="section-header">Included Modules</h3>
         <ul class="link-list">
         <% klass.each_include do |inc| %>
-        <% unless String === inc.module %>
+        <% unless String === inc.module then %>
           <li><a class="include" href="<%= klass.aref_to inc.module.path %>"><%= inc.module.full_name %></a></li>
         <% else %>
           <li><span class="include"><%= inc.name %></span></li>
@@ -164,123 +171,137 @@
   <div id="documentation">
     <h1 class="<%= klass.type %>"><%= klass.full_name %></h1>
 
-    <div id="description">
+    <div id="description" class="description">
       <%= klass.description %>
     </div><!-- description -->
 
-    <% unless klass.constants.empty? then %>
-    <!-- Constants -->
-    <div id="constants-list" class="section">
-      <h3 class="section-header">Constants</h3>
-      <dl>
-      <% klass.each_constant do |const| %>
-        <dt><a name="<%= const.name %>"><%= const.name %></a></dt>
-        <% if const.comment then %>
-        <dd class="description"><%= const.description.strip %></dd>
-        <% else %>
-        <dd class="description missing-docs">(Not documented)</dd>
-        <% end %>
+    <% klass.each_section do |section, constants, attributes| %>
+    <div id="<%= section.sequence %>">
+      <% if section.title then %>
+      <h2 class="section-header"><%= section.title %></h2>
       <% end %>
-      </dl>
-    </div>
-    <% end %>
 
-    <% unless klass.attributes.empty? then %>
-    <!-- Attributes -->
-    <div id="attribute-method-details" class="method-section section">
-      <h3 class="section-header">Attributes</h3>
-
-      <% klass.each_attribute do |attrib| %>
-      <div id="<%= attrib.html_name %>-attribute-method" class="method-detail">
-        <a name="<%= h attrib.name %>"></a>
-        <% if attrib.rw =~ /w/i then %>
-        <a name="<%= h attrib.name %>="></a>
-        <% end %>
-        <div class="method-heading attribute-method-heading">
-          <span class="method-name"><%= h attrib.name %></span><span
-            class="attribute-access-type">[<%= attrib.rw %>]</span>
-        </div>
-
-        <div class="method-description">
-        <% if attrib.comment then %>
-        <%= attrib.description.strip %>
-        <% else %>
-        <p class="missing-docs">(Not documented)</p>
-        <% end %>
-        </div>
+      <% if section.comment then %>
+      <div id="<%= section.sequence %>" class="description">
+        <%= section.description %>
       </div>
       <% end %>
-    </div><!-- attribute-method-details -->
-    <% end %>
 
-    <!-- Methods -->
-    <% klass.methods_by_type.each do |type, visibilities|
-       next if visibilities.empty?
-       visibilities.each do |visibility, methods|
-         next if methods.empty? %>
-    <div id="<%= visibility %>-<%= type %>-method-details" class="method-section section">
-      <h3 class="section-header"><%= visibility.to_s.capitalize %> <%= type.capitalize %> Methods</h3>
-
-    <% methods.each do |method| %>
-      <div id="<%= method.html_name %>-method" class="method-detail <%= method.is_alias_for ? "method-alias" : '' %>">
-        <a name="<%= h method.aref %>"></a>
-
-        <% if method.call_seq then %>
-        <% method.call_seq.strip.split("\n").each_with_index do |call_seq, i| %>
-        <div class="method-heading">
-          <span class="method-callseq"><%= call_seq.strip.gsub(/->/, '&rarr;').gsub( /^\w+\./m, '') %></span>
-          <% if i == 0 then %>
-          <span class="method-click-advice">click to toggle source</span>
+      <% unless constants.empty? then %>
+      <!-- Constants -->
+      <div id="constants-list" class="section">
+        <h3 class="section-header">Constants</h3>
+        <dl>
+        <% constants.each do |const| %>
+          <dt><a name="<%= const.name %>"><%= const.name %></a></dt>
+          <% if const.comment then %>
+          <dd class="description"><%= const.description.strip %></dd>
+          <% else %>
+          <dd class="description missing-docs">(Not documented)</dd>
           <% end %>
-        </div>
         <% end %>
-        <% else %>
-        <div class="method-heading">
-          <span class="method-name"><%= h method.name %></span><span
-            class="method-args"><%= method.params %></span>
-          <span class="method-click-advice">click to toggle source</span>
-        </div>
-        <% end %>
+        </dl>
+      </div>
+      <% end %>
 
-        <div class="method-description">
-          <% if method.comment then %>
-          <%= method.description.strip %>
+      <% unless attributes.empty? then %>
+      <!-- Attributes -->
+      <div id="attribute-method-details" class="method-section section">
+        <h3 class="section-header">Attributes</h3>
+
+        <% attributes.each do |attrib| %>
+        <div id="<%= attrib.html_name %>-attribute-method" class="method-detail">
+          <a name="<%= h attrib.name %>"></a>
+          <% if attrib.rw =~ /w/i then %>
+          <a name="<%= h attrib.name %>="></a>
+          <% end %>
+          <div class="method-heading attribute-method-heading">
+            <span class="method-name"><%= h attrib.name %></span><span
+              class="attribute-access-type">[<%= attrib.rw %>]</span>
+          </div>
+
+          <div class="method-description">
+          <% if attrib.comment then %>
+          <%= attrib.description.strip %>
           <% else %>
           <p class="missing-docs">(Not documented)</p>
           <% end %>
+          </div>
+        </div>
+        <% end %>
+      </div><!-- attribute-method-details -->
+      <% end %>
 
-          <% if method.token_stream then %>
-          <div class="method-source-code" id="<%= method.html_name %>-source">
+      <!-- Methods -->
+      <% klass.methods_by_type(section).each do |type, visibilities|
+         next if visibilities.empty?
+         visibilities.each do |visibility, methods|
+           next if methods.empty? %>
+      <div id="<%= visibility %>-<%= type %>-method-details" class="method-section section">
+        <h3 class="section-header"><%= visibility.to_s.capitalize %> <%= type.capitalize %> Methods</h3>
+
+      <% methods.each do |method| %>
+        <div id="<%= method.html_name %>-method" class="method-detail <%= method.is_alias_for ? "method-alias" : '' %>">
+          <a name="<%= h method.aref %>"></a>
+
+          <% if method.call_seq then %>
+          <% method.call_seq.strip.split("\n").each_with_index do |call_seq, i| %>
+          <div class="method-heading">
+            <span class="method-callseq"><%= call_seq.strip.gsub(/->/, '&rarr;').gsub( /^\w+\./m, '') %></span>
+            <% if i == 0 then %>
+            <span class="method-click-advice">click to toggle source</span>
+            <% end %>
+          </div>
+          <% end %>
+          <% else %>
+          <div class="method-heading">
+            <span class="method-name"><%= h method.name %></span><span
+              class="method-args"><%= method.params %></span>
+            <span class="method-click-advice">click to toggle source</span>
+          </div>
+          <% end %>
+
+          <div class="method-description">
+            <% if method.comment then %>
+            <%= method.description.strip %>
+            <% else %>
+            <p class="missing-docs">(Not documented)</p>
+            <% end %>
+
+            <% if method.token_stream then %>
+            <div class="method-source-code" id="<%= method.html_name %>-source">
 <pre>
 <%= method.markup_code %>
 </pre>
-          </div><!-- <%= method.html_name %>-source -->
+            </div><!-- <%= method.html_name %>-source -->
+            <% end %>
+          </div>
+
+          <% unless method.aliases.empty? then %>
+          <div class="aliases">
+            Also aliased as: <%= method.aliases.map do |aka|
+              if aka.parent then # HACK lib/rexml/encodings
+                %{<a href="#{klass.aref_to aka.path}">#{h aka.name}</a>}
+              else
+                h aka.name
+              end
+            end.join ", " %>
+          </div>
           <% end %>
-        </div>
 
-        <% unless method.aliases.empty? then %>
-        <div class="aliases">
-          Also aliased as: <%= method.aliases.map do |aka|
-            if aka.parent then # HACK lib/rexml/encodings
-              %{<a href="#{klass.aref_to aka.path}">#{h aka.name}</a>}
-            else
-              h aka.name
-            end
-          end.join ", " %>
-        </div>
-        <% end %>
+          <% if method.is_alias_for then %>
+          <div class="aliases">
+            Alias for: <a href="<%= klass.aref_to method.is_alias_for.path %>"><%= h method.is_alias_for.name %></a>
+          </div>
+          <% end %>
+        </div><!-- <%= method.html_name %>-method -->
 
-        <% if method.is_alias_for then %>
-        <div class="aliases">
-          Alias for: <a href="<%= klass.aref_to method.is_alias_for.path %>"><%= h method.is_alias_for.name %></a>
-        </div>
-        <% end %>
-      </div><!-- <%= method.html_name %>-method -->
-
-    <% end %>
-    </div><!-- <%= visibility %>-<%= type %>-method-details -->
-  <% end
-     end %>
+      <% end %>
+      </div><!-- <%= visibility %>-<%= type %>-method-details -->
+    <% end
+       end %>
+    </div><!-- <%= section.sequence %> -->
+  <% end %>
 
   </div><!-- documentation -->
 
