@@ -278,46 +278,46 @@ ul.link-list .type {
 
 
 /* @group Documentation Section */
-#description {
+.description {
   font-size: 100%;
   color: #333;
 }
 
-#description p {
+.description p {
   margin: 1em 0.4em;
 }
 
-#description li p {
+.description li p {
   margin: 0;
 }
 
-#description ul {
+.description ul {
   margin-left: 1.5em;
 }
-#description ul li {
+.description ul li {
   line-height: 1.4em;
 }
 
-#description dl,
+.description dl,
 #documentation dl {
   margin: 8px 1.5em;
   border: 1px solid #ccc;
 }
-#description dl {
+.description dl {
   font-size: 14px;
 }
 
-#description dt,
+.description dt,
 #documentation dt {
   padding: 2px 4px;
   font-weight: bold;
   background: #ddd;
 }
-#description dd,
+.description dd,
 #documentation dd  {
   padding: 2px 12px;
 }
-#description dd + dt,
+.description dd + dt,
 #documentation dd + dt {
   margin-top: 0.7em;
 }
@@ -325,9 +325,21 @@ ul.link-list .type {
 #documentation .section {
   font-size: 90%;
 }
-#documentation h3.section-header {
+
+#documentation h2.section-header {
   margin-top: 2em;
   padding: 0.75em 0.5em;
+  background: #ccc;
+  color: #333;
+  font-size: 175%;
+  border: 1px solid #bbb;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+}
+
+#documentation h3.section-header {
+  margin-top: 2em;
+  padding: 0.25em 0.5em;
   background-color: #dedede;
   color: #333;
   font-size: 150%;
